versions/v2.7.1/docs/TEST_CHECKLIST.md
# V2.7.1 正式版游戏内验收清单

## 快速前置

启动参数加入 `-debug_mode`，进入非铁人测试存档后按 `~`。若只想跳过通讯等待：

```text
effect set_country_flag = rse_route_exclusive_service
research_technology tech_rse_personal_records
research_technology tech_rse_service_specialization
research_technology tech_rse_secret_project
research_technology tech_rse_mechanical_maids
research_technology tech_rse_service_project
research_technology tech_rse_drone_rotation
research_technology tech_rse_planetary_service_project
research_technology tech_rse_organic_mind_deconstruction
research_technology tech_rse_social_simulation
research_technology tech_rse_maid_service
research_technology tech_rse_hypnosis
research_technology tech_rse_desire_analysis
research_technology tech_rse_mind_control
effect set_country_flag = rse_maid_runaway_accepted
```

正常路线事件仍应另开新局测试；直接加旗标不能验证通讯、创始物种权利或 AI 50/50。

## 2.7.1 居家服务组装热修复

- 确保目标星球已有实际在岗的居家服务人口，跨月后查看人口组装界面；空缺岗位不应计算。
- 每100有效劳动力应同时提供机械人口组装0.2与克隆仓式有机人口培育0.2；完成“个体需求模型”后两者同为0.3。
- 普通星球两类居家服务来源的最终值上限均为10，理想乐园均为20；其他建筑、特质或原版来源不受此上限影响。
- 改变侍奉者／机械人口岗位效率后跨月，数值应随实际有效劳动力改变；`error.log` 不得再出现 `CJobTagDatabase` 无法读取 `rse_home_service`。

## 2.7.1 女仆工业区域与倍率

选中目标星球后可快速建造协调中心：

```text
effect add_building = building_rse_maid_workshop_coordination
```

- 普通星球的主要城市区划选择“女仆工业区域”应提供100机械女仆；机械星球与理想乐园应提供300，环形世界应提供500。
- 在奥术都市／枢纽／环形世界把“女仆工业区域”作为次要区划特化时，应在该星球原始岗位数上再乘2：机械星球与理想乐园为600，环形世界为1000。
- 同一倍率规则也应适用于原版通用次要特化；例如物理学研究特化在普通城市为100、机械星球／理想乐园为300，成为次要特化后为600。
- 拆除协调中心后不得再新选该特化；已存在特化的处理方式应与原版失去特化解锁建筑时一致。

## 2.7.1 猎寻子个体容量转换

```text
effect add_building = building_rse_maid_base
```

- 跨日后，星球上全部猎寻子个体岗位容量应等量转换为居家服务，而不是使用固定数量，也不是仅继承猎寻者修正。
- 新建或拆除会改变猎寻子个体容量的区划／建筑后等待1日，转换量应重新读取；女仆基地升级为女仆中心不得重复转换。
- 拆除女仆基地／中心后，猎寻子个体岗位应完整恢复，居家服务转换容量归零。

## 2.7.1 污染数据库与监管地

- 可用 `debugtooltip` 检查国家旗标，并通过正常外交界面发动“污染数据库”；该宣战理由不应受相对实力门槛限制。
- 全面胜利后，目标成为可整合监管地、每月忠诚度+10；每颗殖民地新增2名宗主主体机械人口，而不是200名。
- 受保护的活體陈设物种保留；其他机械物种设为同化，其他有机物种设为净化，并取得十年净化速度+1000%。
- 维持现状应依原版附庸战争逻辑释放已完全占领区域，再把新国家转为监管地。
- 监管地三级效果、100／200／300最终舒适度、社会观察器及AI特化选择需分别查看宗主与附庸界面。

## 2.7.1 舰种上限

```text
research_technology tech_existential_campaigns
research_technology tech_titans
research_technology tech_rse_unrestricted_maids
```

- “女仆不受限制”应显示已解锁对应舰种后增加泰坦上限1000、主宰上限1、巨像上限1。
- 若尚未研究主宰或巨像的原版解锁科技，其舰种仍不可建造；本科技只增加上限，不负责解锁舰体。

## 2.7.1 模拟器人口直算与稳定度修复

- 三种模拟器在物种模板页面应显示名称、风味说明及精确数值；星球修正列表不应出现有机模拟器与欲望模拟器的独立项目，知性模拟器应显示“知性模拟器网络”。
- 每100名对应特质人口应分别提供有机人口组装0.1、稳定度0.1、有机人口增长速度0.1%。有机与欲望直接重算；知性模拟器在下一次月度维护更新。
- 有机模拟器在15000对应人口时达到组装15；知性模拟器在30000人口时达到稳定度30；欲望模拟器在15000人口时达到增长速度15%。继续增加人口不得超过上限。
- 多个带同一模拟器特质的衍生模板应合并计算同一个行星上限，不能让每个模板各获得一份上限。
- 占领期间与非专属侍奉国家持有时三项效果应停用；恢复原拥有者后应自动生效。
- 从旧存档载入并跨月后，有机与欲望的旧可见修正应被清除；知性修正应更新为当前特质人口所对应的准确稳定度。

## 2.6.1 完全成果快速测试

```text
effect set_country_flag = rse_transformation_nanotech_full
effect set_country_flag = rse_transformation_modularity_full
effect set_country_flag = rse_transformation_virtuality_full
```

- 三个永久旗标可以同时存在；精炼开启时分别解锁机械女仆的纳米机器人0.5、活体金属0.5与能量5基础产出。
- 纳米及模块化各只增加一份矿物维护2.5；虚拟化不增加额外矿物维护。
- 采纳 `tr_nanotech_adopt`、`tr_modularity_adopt`、`tr_virtuality_adopt` 后，对应已解锁产出应各自翻倍，维护费不得翻倍。
- 正常进行嬗变局势时，前三阶段选择“完全”成果后等待一次月度结算；即使第四阶段选择另一条最终路线，已保存的三项成果仍应保留。

旧存档迁移可在选中拥有对应原版中型成果地貌的国家后测试：

```text
effect remove_country_flag = rse_transformation_results_migrated_261
```

等待一次月度结算后，对应永久成果旗标应自动恢复。若旧存档已失去或移除成果地貌，可直接使用上方三条 `set_country_flag` 指令恢复实际取得的成果。

## 2.5.0 其他生产快速测试

```text
effect add_building = building_rse_maid_base
effect add_building = building_rse_maid_workshop_coordination
effect add_building = building_rse_maid_automation_coordination
research_technology tech_mine_dark_matter
```

- 机械女仆生产政策七项文本应依次显示20/0、18/2、15/5、10/10、5/15、2/18、0/20；100岗位、100%效率时与资源栏实收一致。
- 最终路线的原版 `transformation_*` 旗标不再直接解锁基础产线；基础产线及传统翻倍条件均以2.6.1永久完全成果旗标为准。
- 用 `activate_tradition tr_rse_exclusive_service_finish` 后启动合成时代嬗变局势，正常速度下每月应比原版多5进度；暂停局势时不得继续增加。
- 研究暗物质收集后，开启精炼的机械女仆应新增暗物质与对应矿物消耗；切换停止精炼决议后全部附加路线停止。
- 子个体订制节目中心的领袖经验+10%与领袖维护-10%应有明确文本；三种媒体基地的活體陳设条件效果应随有效劳动力变化。

## 法令文本与服务器升级

- 法令页面应以简体中文显示“随身空间利用”“陈设增长再编法案”“招募活體陳設领袖”及各自说明，不得显示原始键值。
- 执行主服务器升级后，“服务器升级忙碌中”应显示并实际提供有机人口培育+30、活體陳設效率-50%、机械人口岗位效率-30%，持续5年。

## 榨汁中与监控模块

1. 准备两颗都有活體陳設的殖民地，增长政策切换到“榨干他们”。
2. 只在其中一颗启用监控模块并跨月。
3. 未监控星球的人口应转为独立“榨汁中”岗位，资源、稳定度、岗位效率、特化与支援岗位全部停止；人口维护费不变。
4. 监控星球应继续使用正常活體陳設岗位并恢复全部效果，每月扣 10 能量。
5. 帝国政策不可被强制切回维持计划。关闭监控或切换政策后，两个岗位应自动互换且没有被忽视的活體陳設。

## 居家服务与活动记录者回归

- 行星岗位页面应新增“侍奉者”阶层，位置在“活體陳設”之下、“复合子个体”之上，且只列出居家服务、活动记录者、处理专员与材料合成者；其他岗位必须留在原阶层。
- “侍奉者”阶层标题左侧应显示自定义紫色图标，不应为空白、出现缺失纹理或显示其他阶层图标。
- 在100%岗位效率时，居家服务每100在岗提供反常度-20、机械组装+0.2、有机培育+0.2、防御部队1；个体需求模型使两种组装增加至0.3。
- 活动记录者每100在岗应在岗位面板直接显示社会学9，并实际增加帝国社会学研究收入；其他研究岗位产出+4%、人口帝国规模-2%。
- 永久活动记录把社会学基础产出增加4.5并额外提供人口帝国规模-1%，不提高研究岗位加成。
- 提高机械人口／活动记录者岗位效率后，其社会学和行星修正仍会随有效劳动力变化；这是预期行为。
- 单独增加活动记录者数量时，核对每名活动记录者自身社会学的倍率：其提供的 `planet_researchers` 加成不得出现在自身资源倍率中；总产出应为线性而非平方增长。
- 改变复合子个体岗位效率后，四个侍奉者岗位的有效劳动力不得变化；改变机械人口岗位效率时则应正常变化。
- 连续增加四种侍奉者岗位数量，确认其自身效果不会反向进入侍奉者阶层效率，曲线应保持线性。
- 四个侍奉者岗位应优先于普通经济子个体岗位自动填入；其基础权重为50。机械女仆、居家女仆与参观规划者仍为20，战士／突触／繁殖子个体不应被强行排挤。
- 清空岗位、使星球被占领或转移所有权后，岗位本体效果应随岗位重算消失。
- 活體陳設基础凝聚力为 1；个人记录后为 2；服务专精后为 3。
- 华丽别墅、女仆天堂、城市穹顶和行星穹顶各使所在星球岗位凝聚力产出 +100%。

## 建筑与升级

可在选中星球后快速加入合并建筑：

```text
effect add_building = building_rse_alley_clothing_workshop
```

- 后巷服装订制厂提供 150 处理专员和 150 材料合成者。
- 后巷服装订制厂应使当地活體陳设食物维护费+25%。
- 女仆基地可升级为女仆中心；两级均可招募战斗女仆并保留200／500机械女仆岗位，同时按星球实际猎寻子个体容量转换等量居家服务。
- 女仆工坊协调中心解锁女仆工业区域；不再通过经济分类让既有机械女仆继承工匠修正。
- 工坊建成后，全国机械女仆仍应产生每100岗位20贸易额。
- 居家服务组装与有机培育随岗位效率改变；普通星球分别不超过10，理想乐园分别不超过20，清空岗位后下一月归零。
- 三种模拟器在物种模板中显示数值说明；有机与欲望隐藏星球修正项目，知性模拟器因稳定度类别限制保留一个可核对数值的行星修正。
- 女仆自动化协调中心只能建一座；固定-40%自动化劳动力、-20%自动化岗位维护，100名满效率协调员抵回+50%。
- 建造列表、已建建筑数据库与文本中均不应再出现神秘小馆或有机材料固化厂。
- 合并建筑的建造成本应为2800矿物、1000食物、500合金；维护费为25能量、10食物、10矿物。
- 若旧存档中的两座旧建筑尚未在2.0.3完成迁移，它们会消失；选中原星球后使用上方指令补回合并建筑。
- 华丽别墅 → 女仆天堂正常升级。
- 研究 `tech_fe_dome_1` 后可升级城市穹顶；研究 `tech_fe_dome_2` 后可升级行星穹顶。
- 城市穹顶：5000 住房、5000 活體陳設、1000 居家女仆。
- 行星穹顶：10000 住房、10000 活體陳設、2000 居家女仆、人口维护费 -5%。

## 陈设活动范围

- 城市：每 100 活體陳設提供复合子个体 +1.2%、劳工与简单子个体 +0.2%。
- 不限：每 100 活體陳設提供复合子个体 +0.7%、劳工与简单子个体 +0.7%。
- 乡村：每 100 活體陳設提供复合子个体 +0.2%、劳工与简单子个体 +1.2%，并保留轰炸减伤。
- 三项政策下均不得显示或实际提供“机械人口岗位效率”。
- 选择“不限”时只应出现一条来自活體陳設的劳工与简单子个体效率，752名活體陳設应显示复合子个体与劳工／简单子个体各+526.4%；启用“劳动模拟”也不得出现第二条+752%。
- 在机械星球或理想乐园启用“生产活动参与”，三种生产枢纽区划应各提供100活體陳設与100参观规划者岗位；增减区划后跨月更新。

## 科技、生产政策与物种权利

- 科技顺序应为“个人记录 → 服务专精 → 机械女仆”；子个体轮调与有机体思维解构也要求服务专精。
- 机械女仆生产共有0%、10%、25%、50%、75%、90%、100%七档；10%档每100岗位为1350消费品与150合金，90%档为150消费品与1350合金。
- 专属侍奉路线下，非创始有机物种可以选择原版奴隶公民权；带“受侍奉创始种族”特质的物种仍不可奴役。
- 普遍庇护路线选项只显示一条“正常有机帝国评价+50”摘要，不展开全部帝国名称；实际关系修正仍逐国生效。

## 机械女仆有机增长移除

- 研究“女仆侍奉”与“欲望分析”后，机械女仆岗位不得显示或产生有机人口培育／增长。
- 女仆纪念碑只保留活體陳設+5%与机械女仆+20%岗位效率，不再按机械女仆数量提供有机增长。
- 从2.0.8旧存档更新时等待一次月度结算，原有 `rse_maid_monument_scaled` 增长修正应消失且不再恢复。

## 领袖与事件

快速事件：

```text
event rse_v2.20
event rse_proto.200
```

- 重新伟大的种族立即给一名创始活體陳設科学家，并解锁后续三类领袖招募。
- 包围事件只从现有机械科学家抽取候选；第二阶段只给所选领袖一种最终特质并移除待定特质。
- 事件完成后，5 级以上机械领袖升级时可选择花嫁／公共暴露／随身罐子，三者互斥。
- 扩展升级选项只加给机械领袖；活體陳設领袖不应取得。
- 随身罐子只给其他机械领袖经验 +10%、维护费 -10%；持有者本人和有机领袖不受网络加成。
- 花嫁若因特殊效果死亡，替代者保留姓名、外观、等级、类别和已有特质，不恢复内阁席位或指派。
- 白色领袖开始后自动持续 300 天，不能暂停或取消；完成后领袖返回并给星球 10 年常识修正。

## 既有核心回归

- 一般公民权有机物种不能产生普通领袖；创始有机物种仍为生物纪念品／活體陳設。
- 停止有机增长不影响原版停止子个体生产。
- 战斗女仆伤害 12.5、生命 15、无士气、附带伤害 50%，招募花费250消费品。
- 理想乐园清除障碍、保留特殊地块、区划上限 +50%，使用都市背景。
- 研究原版火山环境改造科技后，火山星球可直接改造为理想乐园；未研究时该链接不可用。
- 理想乐园的樞纽区划可选择“食物聚焦”，并产生农业子个体及农业建筑槽位；普通机械星球不会因为本模组额外取得该选项。
- 保留天然气特殊地貌的理想乐园在研究异星天然气开采科技后，可选择原版樞纽版“异星天然气捕获”；没有对应地貌时仍不可选择。
- 机械女仆工业、七档生产政策、精炼开关、活体金属及再编法案按当前数值回归。
- 检查 `error.log` 与 `game.log`：除必要的原版同键覆写提示外，不应出现本模组未知键、错误 scope、缺失本地化或重复事件 ID。

## 日志验收

2.7.1新增系统均属于正式内容。完成上述流程后检查 `error.log` 与 `game.log`，不得出现未知区划／特化、无效附庸条款、错误战争scope、无效人口权利或未知舰种上限修正；原“自动泰坦”已由舰种上限科技取代。
